--- a/.github/workflows/Python-Build.yml
+++ b/.github/workflows/Python-Build.yml
@@ -128,7 +128,7 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.event_name != 'workflow_dispatch' && github.ref || github.event.inputs.release_tag }}
         name: ${{ github.event.inputs.version }}-${{ github.event.inputs.release_channel }}
-        prerelease: ${{ github.event.inputs.release_channel == Beta }}
+        prerelease: ${{ github.event.inputs.release_channel = Beta }}
         allowUpdates: true
         omitBodyDuringUpdate: true
         omitNameDuringUpdate: true
